# cli-mutil-plat

./: .gitignore  ARCHITECTURE_OPTIMIZATION_GUIDE.md  CLAUDE.md  CODE_QUALITY_ANALYSIS.md  CONCURRENCY_INTEGRATION_PLAN.md  DATABASE_API_REFERENCE.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_WRITE_OPERATIONS_COMPLETE.md  ERROR_HANDLING_PROGRESS.md  FEATURE_DEVELOPMENT_PLAN.md  FINAL_PROGRESS_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_COMPLETED.md  MEMORY_INTEGRATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PHASE1_DATABASE_COMPLETE.md  PHASE2_PTY_COMPLETE.md  PHASE3_AGENTBRIDGE_COMPLETE.md  PHASE4_ADAPTERS_FRAMEWORK_COMPLETE.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  TAURI_COMPILATION_FIX_COMPLETE.md  TAURI_MIGRATION_PROGRESS.md  TAURI_STARTUP_GUIDE.md  electron.vite.config.ts  fix-db.js  fix-git-handlers.js  giggly-roaming-sunset.md  package-lock.json  package.json  run-tauri.bat  start-tauri-dev.bat  start-tauri.bat  start-tauri.ps1  start.bat  tailwind.config.js  todo.md  (+9 more)
.playwright-mcp/: page-2026-04-07T03-21-56-814Z.yml
.qwen/: settings.json
.serena/: project.yml
docs/: ARCHITECTURE_OPTIMIZATION_COMPLETE.md  CORE_COMPETITIVENESS_ENHANCEMENT_PLAN.md  CORE_COMPETITIVENESS_OPTIMIZATION_COMPLETE.md  CORE_COMPETITIVENESS_OPTIMIZATION_REPORT.md  CORE_COMPETITIVENESS_PLAN.md  COST_OPTIMIZATION_IMPLEMENTATION_REPORT.md  COST_OPTIMIZATION_INTEGRATION_GUIDE.md  DAG_ENHANCEMENT_IMPLEMENTATION_REPORT.md  DAG_VISUALIZATION_GUIDE.md  GIT_INTEGRATION_GUIDE.md  MEMORY_DEDUP_GUIDE.md  MEMORY_DEDUP_IMPLEMENTATION_REPORT.md  MEMORY_INTEGRATION_PLAN.md  PRODUCT_ARCHITECTURE_REVIEW.md  PROVIDER_HEALTH_GUIDE.md  PROVIDER_HEALTH_IMPLEMENTATION_REPORT.md  SUMMARY.md  agent-teams-enhancement.md  code-review-graph-roadmap.md  crow5-website-summary.md  knowledge-system-refactoring.md  registry.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bin_commands.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  database.rs  git.rs  mod.rs  provider.rs  session.rs  task.rs  team.rs
src-tauri/src/services/: adapter_registry.rs  agent_bridge.rs  ansi_parser.rs  database.rs  migrations.rs  migrations_additional.rs  mod.rs  pty.rs  replay.rs  session_manager.rs
src-tauri/src/services/adapters/: claude_sidecar.rs  mod.rs  openai_compatible.rs
src-tauri/src/types/: cost.rs  events.rs  git.rs  mcp.rs  mod.rs  provider.rs  session.rs  task.rs  team.rs
(+321 files in other folders)
