[package]
name = "prismops"
version = "0.4.6"
edition = "2021"

[lib]
name = "prismops_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "prismops"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ---- Tauri Core ----
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
    "image-ico",
    "devtools",
] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"

# ---- Serialization ----
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ---- Async Runtime ----
tokio = { version = "1", features = [
    "full",
    "rt-multi-thread",
    "sync",
    "macros",
    "tracing",
] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# ---- Database ----
rusqlite = { version = "0.32", features = [
    "bundled",
    "backup",
    "functions",
    "vtab",
] }

# ---- Terminal / PTY ----
portable-pty = "0.8"

# ---- HTTP Client ----
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
    "stream",
] }

# ---- WebSocket ----
tokio-tungstenite = "0.26"

# ---- Logging / Tracing ----
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
tracing-error = "0.2"

# ---- File System ----
walkdir = "2"
notify = "7"
tempfile = "3"
dirs = "6"

# ---- Utilities ----
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
encoding_rs = "0.8"
regex = "1"
glob = "0.3"
toml = "0.8"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"

# ---- Process Management ----
sysinfo = "0.33"

# ---- Encoding / Hashing ----
blake3 = "1"

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
